--- a/SmoothieAq/src/main/java/jesperl/dk/smoothieaq/client/css/SmoothieAq.css
+++ b/SmoothieAq/src/main/java/jesperl/dk/smoothieaq/client/css/SmoothieAq.css
@@ -83,3 +83,24 @@
 	display: table-cell;
 /* 	width: 100%; */
 }
+
+.smallbadge {
+	top: -2px; 
+	padding: 0px !important; 
+	padding-top: 7px !important; 
+	width: 16px !important; 
+	min-width: 16px !important; 
+	height: 16px !important; 
+	right: -6px !important; 
+	border-radius: 100% !important; 
+/* 	background-color: rgb(244,67,54) !important; */
+	color: rgb(255,255,255) !important;
+	font-weight: bold; 
+	font-family: Roboto, sans-serif;
+	text-align: center;
+	position: absolute;
+}
+
+.badgeable {
+	position: relative;
+}
